--- a/index.html
+++ b/index.html
@@ -6,47 +6,32 @@
     <title>Thả Thính</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             text-align: center;
+            font-family: Arial, sans-serif;
             margin-top: 50px;
         }
-        .container {
-            max-width: 400px;
-            margin: auto;
-            padding: 20px;
-            border: 2px solid #ff4081;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        button {
+        .button {
+            display: inline-block;
             margin: 10px;
             padding: 10px 20px;
-            font-size: 16px;
-            border: none;
+            font-size: 18px;
             cursor: pointer;
+            border: none;
             border-radius: 5px;
         }
-        .yes {
-            background-color: #4CAF50;
-            color: white;
-        }
-        .no {
-            background-color: #f44336;
-            color: white;
-        }
+        .yes { background-color: lightgreen; }
+        .no { background-color: lightcoral; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Cho a Thai triệu cớm được hong? 🥺</h2>
-        <button class="yes" onclick="showMessage('Anh yêu em')">Có ❤️</button>
-        <button class="no" onclick="showMessage('Dỗi 😤')">Không 😒</button>
-        <h3 id="message"></h3>
-    </div>
+    <h1>Cho a Thai triệu cớm được hong? 🥺</h1>
+    <button class="button yes" onclick="reply(true)">Có</button>
+    <button class="button no" onclick="reply(false)">Không</button>
+    <h2 id="response"></h2>
 
     <script>
-        function showMessage(text) {
-            document.getElementById('message').innerText = text;
+        function reply(isYes) {
+            document.getElementById("response").innerText = isYes ? "ANh yêu Phương siu nhiều luôn 💖" : "DỖi 1 tuần á 😤";
         }
     </script>
 </body>
