--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script>
         function reply(isYes) {
-            document.getElementById("response").innerText = isYes ? "ANh yêu Phương siu nhiều luôn 💖" : "DỖi 1 tuần á 😤";
+            document.getElementById("response").innerText = isYes ? "ANh yêu Phương nhiều luôn 💖" : "DỖi 1 tuần á 😤";
         }
     </script>
 </body>
