--- a/index.html
+++ b/index.html
@@ -10,28 +10,81 @@
             font-family: Arial, sans-serif;
             margin-top: 50px;
         }
-        .button {
-            display: inline-block;
-            margin: 10px;
+        .btn {
             padding: 10px 20px;
             font-size: 18px;
+            margin: 10px;
             cursor: pointer;
             border: none;
             border-radius: 5px;
         }
-        .yes { background-color: lightgreen; }
-        .no { background-color: lightcoral; }
+        .yes {
+            background-color: #ff4d4d;
+            color: white;
+        }
+        .no {
+            background-color: #808080;
+            color: white;
+        }
+        .effect {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .hidden {
+            display: none;
+        }
+        .image-container {
+            margin-top: 20px;
+        }
+        .image-container img {
+            width: 150px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
-    <h1>Cho a Thai triệu cớm được hong? 🥺</h1>
-    <button class="button yes" onclick="reply(true)">Có</button>
-    <button class="button no" onclick="reply(false)">Không</button>
-    <h2 id="response"></h2>
-
+    <h2>Cho a Thái triệu cớm được hong?</h2>
+    <button id="yes-btn" class="btn yes" onclick="showLove()">Có</button>
+    <button id="no-btn" class="btn no" onclick="showSad()">Không</button>
+    
+    <div id="effect-container"></div>
+    
     <script>
-        function reply(isYes) {
-            document.getElementById("response").innerText = isYes ? "Anh yêu Phương nhiều luôn 💖" : "DỖi 1 tuần á 😤";
+        function showLove() {
+            let container = document.getElementById('effect-container');
+            container.innerHTML = `
+                <div class="effect">
+                    <p>Anh yêu Phương siu nhiều luôn ❤️</p>
+                    <div class="image-container">
+                        <img src="https://i.pinimg.com/originals/c3/bb/4d/c3bb4d7ea3365dce2df03e17e659d058.gif" alt="Hearts">
+                    </div>
+                </div>
+            `;
+            document.getElementById("yes-btn").disabled = false;
+            document.getElementById("no-btn").disabled = false;
+        }
+
+        function showSad() {
+            let container = document.getElementById('effect-container');
+            container.innerHTML = `
+                <div class="effect">
+                    <p>Dỗi 1 tuần á 😢</p>
+                    <div class="image-container">
+                        <img src="https://i.pinimg.com/originals/16/45/85/1645855edeacd5d563a87c3092566ea9.gif" alt="Sad Face">
+                    </div>
+                </div>
+            `;
+            document.getElementById("yes-btn").disabled = false;
+            document.getElementById("no-btn").disabled = false;
         }
     </script>
 </body>
