--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </style>
 </head>
 <body>
-    <h1>Tình yêu của a dậy rồi à? 🥰</h1>
+    <h1>Tình yêu của a học xong rồi à? 🥰</h1>
     <button onclick="showMessage()">Dạ</button>
-    <div id="message">Chúc ny anh ngày mới vui vẻ, dậy ăn sáng và đi lớp nhó ❤️</div>
+    <div id="message">Soạn sách xong đi đánh răng nhó, a đợi❤️</div>
     <div id="gif">
         <img src="https://i.pinimg.com/originals/4d/90/d6/4d90d6508c4d8c6a65a213ecf49f5f02.gif" alt="Cute GIF">
     </div>
@@ -47,3 +47,4 @@
     </script>
 </body>
 </html>
+
