--- a/index.html
+++ b/index.html
@@ -3,48 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yêu thương</title>
+    <title>Trang Cute</title>
     <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #ffdde1;
-            padding-top: 50px;
+            background-color: #ffe4e1;
+            background-image: url('https://wallpaperaccess.com/full/4768652.jpg'); /* Hình nền anime */
+            background-size: cover;
+            background-position: center;
         }
-        #message, #gif {
-            display: none;
-            margin-top: 20px;
+        h1 {
+            color: #ff69b4;
+            background: rgba(255, 255, 255, 0.7);
+            display: inline-block;
+            padding: 10px 20px;
+            border-radius: 15px;
         }
         button {
-            background-color: #ff4d6d;
-            color: white;
+            background-color: #ffb6c1;
             border: none;
             padding: 10px 20px;
+            margin: 10px;
             font-size: 18px;
             cursor: pointer;
             border-radius: 10px;
+            transition: all 0.3s;
         }
         button:hover {
-            background-color: #ff1e4d;
+            background-color: #ff69b4;
+            color: white;
+            transform: scale(1.1);
+        }
+        #imageContainer {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Tình yêu của a học xong rồi à? 🥰</h1>
-    <button onclick="showMessage()">Dạ</button>
-    <div id="message">Soạn sách xong đi đánh răng nhó, a đợi bé❤️</div>
-    <div id="gif">
-        <img src="https://i.pinimg.com/originals/4d/90/d6/4d90d6508c4d8c6a65a213ecf49f5f02.gif" alt="Cute GIF">
-    </div>
+    <h1>Ebe Phương muốn cái gì nào?</h1> <br>
     
+    <button onclick="showImage('https://i.pinimg.com/originals/5a/02/bf/5a02bff82e791011f3b4ffeb018f311a.gif')">Đáp án 1</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/08/ee/7a/08ee7a08e9b301d601c86b2eccc6e3d4.gif')">Đáp án 2</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/76/85/c7/7685c7d254a76fa276a73f7483a479d5.gif')">Đáp án 3</button>
+    <div id="imageContainer"></div>
+
     <script>
-        function showMessage() {
-            document.getElementById("message").style.display = "block";
-            setTimeout(() => {
-                document.getElementById("gif").style.display = "block";
-            }, 1000);
+        function showImage(url) {
+            document.getElementById('imageContainer').innerHTML = `<img src="${url}" alt="Cute Image" style="max-width: 100%; height: auto; margin-top: 20px;">`;
         }
     </script>
 </body>
 </html>
-
