--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 <body>
     <h1>Ebe Phương muốn cái gì nào?</h1> <br>
     
-    <button onclick="showImage('https://i.pinimg.com/originals/5a/02/bf/5a02bff82e791011f3b4ffeb018f311a.gif')">Đáp án 1</button>
-    <button onclick="showImage('https://i.pinimg.com/originals/08/ee/7a/08ee7a08e9b301d601c86b2eccc6e3d4.gif')">Đáp án 2</button>
-    <button onclick="showImage('https://i.pinimg.com/originals/76/85/c7/7685c7d254a76fa276a73f7483a479d5.gif')">Đáp án 3</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/5a/02/bf/5a02bff82e791011f3b4ffeb018f311a.gif')">1</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/d4/d1/8d/d4d18dc51e8f20471bc24c77df365570.gif')">2</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/76/85/c7/7685c7d254a76fa276a73f7483a479d5.gif')">3</button>
     <div id="imageContainer"></div>
 
     <script>
