--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 <body>
     <h1>Ebe Phương muốn cái gì nào?</h1> <br>
     
-    <button onclick="showImage('https://i.pinimg.com/originals/5a/02/bf/5a02bff82e791011f3b4ffeb018f311a.gif')">1</button>
-    <button onclick="showImage('https://i.pinimg.com/originals/d4/d1/8d/d4d18dc51e8f20471bc24c77df365570.gif')">2</button>
-    <button onclick="showImage('https://i.pinimg.com/originals/76/85/c7/7685c7d254a76fa276a73f7483a479d5.gif')">3</button>
+    <button onclick="showImage('https://i.pinimg.com/736x/b3/c7/f1/b3c7f119624ed2946de32a992ad42db0.jpg')">1</button>
+    <button onclick="showImage('https://i.pinimg.com/736x/05/6d/05/056d05c6dd2de96f240b8568583bd34c.jpg')">2</button>
+    <button onclick="showImage('https://i.pinimg.com/736x/31/37/eb/3137eb320c96a7ffecab6fa9afd4b5e0.jpg')">3</button>
+    <button onclick="showImage('https://i.pinimg.com/originals/1d/2a/39/1d2a39184469b1994bc92f24b6b5fce0.gif')">4</button>
     <div id="imageContainer"></div>
 
     <script>
