--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button onclick="showImage('https://i.pinimg.com/736x/b3/c7/f1/b3c7f119624ed2946de32a992ad42db0.jpg')">1</button>
     <button onclick="showImage('https://i.pinimg.com/736x/05/6d/05/056d05c6dd2de96f240b8568583bd34c.jpg')">2</button>
     <button onclick="showImage('https://i.pinimg.com/736x/31/37/eb/3137eb320c96a7ffecab6fa9afd4b5e0.jpg')">3</button>
-    <button onclick="showImage('https://i.pinimg.com/originals/1d/2a/39/1d2a39184469b1994bc92f24b6b5fce0.gif')">4</button>
+    <button onclick="showImage('https://i.pinimg.com/736x/06/ed/97/06ed972fd36df72713f07a3df200d37a.jpg')">4</button>
     <div id="imageContainer"></div>
 
     <script>
