--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phương</title>
+    <title>PHUONG</title>
     <style>
         body {
             text-align: center;
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>Mai 8/3 kìa, Ebe Phương muốn cái gì nào?</h1> <br>
+    <h1> Mai 8/3 kìa, Ebe Phương muốn cái gì nào? </h1> <br>
     
     <button onclick="showImage('https://i.pinimg.com/736x/b3/c7/f1/b3c7f119624ed2946de32a992ad42db0.jpg')">1</button>
     <button onclick="showImage('https://i.pinimg.com/736x/05/6d/05/056d05c6dd2de96f240b8568583bd34c.jpg')">2</button>
