--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
     </style>
 </head>
 <body>
-    <h1> Mai 8/3 kìa, Ebe Phương muốn cái gì nào? </h1> <br>
+    <h1> Thực ra a muốn tặng Phương quả này nè..</h1> <br>
     
-    <button onclick="showImage('https://i.pinimg.com/736x/b3/c7/f1/b3c7f119624ed2946de32a992ad42db0.jpg')">1</button>
-    <button onclick="showImage('https://i.pinimg.com/736x/05/6d/05/056d05c6dd2de96f240b8568583bd34c.jpg')">2</button>
-    <button onclick="showImage('https://i.pinimg.com/736x/d6/0f/de/d60fde8def77016d89ea5950fd3f473a.jpg')">3</button>
-    <button onclick="showImage('https://i.pinimg.com/736x/f2/2f/83/f22f83c314836003ec48d4b5016cfac9.jpg')">4</button>
+    <button onclick="showImage('https://cdn.tgdd.vn/Products/Images/8785/278286/bhx/bau-sao-trai-500g-600g-202205201651507584.jpg')">Cái gì ạ?</button>
+   com/736x/f2/2f/83/f22f83c314836003ec48d4b5016cfac9.jpg')">4</button>
     <div id="imageContainer"></div>
 
     <script>
